unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/zkfedex__ShipmentSpecialServices__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkfedex__shipmentSpecialServicesHelp</customHelpPage>
    <description>Shipment Special Services stores the various options associated with a FedEx shipment.</description>
    <label>FedEx Shipment Special Services</label>
    <nameField>
        <displayFormat>SpecialServices-{000000000}</displayFormat>
        <label>Shipment Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipment Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>