unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__AlcoholRecipientType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AlcoholRecipientType__c</fullName>
    <label>Alcohol Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONSUMER</fullName>
            </value>
            <value>
                <fullName>LICENSEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>