unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__AlcoholShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AlcoholShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alcohol Shipment</label>
    <type>Checkbox</type>
</CustomField>