unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__Bso__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Bso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BSO</label>
    <type>Checkbox</type>
</CustomField>