unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoAccount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoAccount__c</fullName>
    <label>BSO Account</label>
    <length>12</length>
    <type>Text</type>
</CustomField>