unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoBrokerType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoBrokerType__c</fullName>
    <label>BSO Broker Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EXPORT</fullName>
            </value>
            <value>
                <fullName>IMPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>