unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoCity__c</fullName>
    <label>BSO City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>