unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoCompany__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoCompany__c</fullName>
    <label>BSO Company</label>
    <length>35</length>
    <type>Text</type>
</CustomField>