unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoContactEmail__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoContactEmail__c</fullName>
    <label>BSO Contact Email</label>
    <type>Email</type>
</CustomField>