unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoContactId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoContactId__c</fullName>
    <label>BSO Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>