unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoContactName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoContactName__c</fullName>
    <label>BSO Contact Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>