unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoContactPhone__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoContactPhone__c</fullName>
    <label>BSO Contact Phone</label>
    <length>35</length>
    <type>Text</type>
</CustomField>