unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoContactPhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoContactPhoneExtension__c</fullName>
    <label>BSO Contact Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>