unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoContactTitle__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoContactTitle__c</fullName>
    <label>BSO Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>