unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoCountry__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoCountry__c</fullName>
    <label>BSO Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>