unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoPostalCode__c</fullName>
    <label>BSO Zip/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>