unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoState__c</fullName>
    <label>BSO State/Province</label>
    <length>14</length>
    <type>Text</type>
</CustomField>