unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoStreet__c</fullName>
    <label>BSO Street</label>
    <type>TextArea</type>
</CustomField>