unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__BsoTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BsoTaxId__c</fullName>
    <label>BSO Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>