unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__Cod__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Cod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FedEx® Collect on Delivery (C.O.D.)</label>
    <type>Checkbox</type>
</CustomField>