unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodAccount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodAccount__c</fullName>
    <label>COD Collection Account</label>
    <length>12</length>
    <type>Text</type>
</CustomField>