unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodAddressIsResidential__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodAddressIsResidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD Collection Address is Residential</label>
    <type>Checkbox</type>
</CustomField>