unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodCity__c</fullName>
    <label>COD Collection City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>