unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodCollectionType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodCollectionType__c</fullName>
    <label>COD Collection Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>