unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodCompany__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodCompany__c</fullName>
    <label>COD Collection Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>