unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodContactName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodContactName__c</fullName>
    <label>COD Collection Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>