unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodContactPhone__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodContactPhone__c</fullName>
    <label>COD Collection Contact Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>