unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodCountryCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodCountryCode__c</fullName>
    <label>COD Collection Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>