unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodPostalCode__c</fullName>
    <label>COD Collection Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>