unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodReferenceType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodReferenceType__c</fullName>
    <label>COD Reference Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>