unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodState__c</fullName>
    <label>COD Collection State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>