unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodStreet__c</fullName>
    <label>COD Collection Street</label>
    <type>TextArea</type>
</CustomField>