unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__CodTrackingId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CodTrackingId__c</fullName>
    <label>COD Tracking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>