unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__DangerousGoods__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DangerousGoods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous Goods</label>
    <type>Checkbox</type>
</CustomField>