unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__DateCertainHomeDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DateCertainHomeDeliveryDate__c</fullName>
    <label>FedEx Date Certain Home Delivery® Date</label>
    <type>Date</type>
</CustomField>