unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__DryIce__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DryIce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Ice</label>
    <type>Checkbox</type>
</CustomField>