unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__FreightInsideDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FreightInsideDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Inside Delivery</label>
    <type>Checkbox</type>
</CustomField>