unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__FreightInsidePickup__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FreightInsidePickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Inside Pickup</label>
    <type>Checkbox</type>
</CustomField>