unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__HalPhone__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HalPhone__c</fullName>
    <label>HAL Contact phone</label>
    <length>35</length>
    <type>Text</type>
</CustomField>