unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__HalPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HalPostalCode__c</fullName>
    <label>FedEx Location Zip/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>