unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__HalState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HalState__c</fullName>
    <label>FedEx Location State/Province</label>
    <length>14</length>
    <type>Text</type>
</CustomField>