unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__HalStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HalStreet__c</fullName>
    <label>FedEx Location Street</label>
    <type>TextArea</type>
</CustomField>