unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__HazardousMaterials__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HazardousMaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Materials</label>
    <type>Checkbox</type>
</CustomField>