unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__IntlReturnCustomsReturnDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IntlReturnCustomsReturnDescription__c</fullName>
    <description>Specifies additional description about customs return type. This is a required field when the customs return type is "OTHER"</description>
    <inlineHelpText>Specifies additional description about customs return type. This is a required field when the customs return type is "OTHER"</inlineHelpText>
    <label>Intl Return Customs Return Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>