unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__IntlReturnCustomsReturnType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IntlReturnCustomsReturnType__c</fullName>
    <label>Intl Return Customs Return Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>