unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__LithiumBatteriesCells__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LithiumBatteriesCells__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lithium Batteries/Cells</label>
    <type>Checkbox</type>
</CustomField>