unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__OneRate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OneRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Rate</label>
    <type>Checkbox</type>
</CustomField>