unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__OrmD__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OrmD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ORM-D</label>
    <type>Checkbox</type>
</CustomField>