unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__PharmacyDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PharmacyDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pharmacy Delivery</label>
    <type>Checkbox</type>
</CustomField>