unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__PriorityAlert__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PriorityAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Alert</label>
    <type>Checkbox</type>
</CustomField>