unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__ReturnsClearance__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReturnsClearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returns Clearance</label>
    <type>Checkbox</type>
</CustomField>