unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__SaturdayDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SaturdayDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Delivery</label>
    <type>Checkbox</type>
</CustomField>