unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__SaturdayHold__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SaturdayHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Hold</label>
    <type>Checkbox</type>
</CustomField>