unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__SaturdayPickup__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SaturdayPickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Pickup</label>
    <type>Checkbox</type>
</CustomField>