unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__SmallQuantityException__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SmallQuantityException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Small Quantity Exception</label>
    <type>Checkbox</type>
</CustomField>