unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__ThirdPartyConsignee__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ThirdPartyConsignee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Consignee</label>
    <type>Checkbox</type>
</CustomField>