unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__TotalCodAmount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalCodAmount__c</fullName>
    <label>COD Total Collection Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>