unpackaged/main/default/objects/zkfedex__ShipmentSpecialServices__c/fields/zkfedex__TotalCodAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalCodAmountCurrency__c</fullName>
    <label>COD Total Collection Amount Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>